fixed guide files
